# SelfGrowNetworkDefense

./: .gitignore  AGENTS.md  Cargo.toml  DEMO.md  GEMINI.md  README.md  realdeployment.md  status.md
.github/workflows/: ci.yml
data/real_world_samples/: abilene_scenario.yaml  abilene_scenario_mapping.json  abilene_subset.graphml  real_stimulus.jsonl
docs/: adversarial-harness.md  attack-simulation-pipeline.md  phase4-report.md  pitch_prototype.md  scenario-schema.md  signal-taxonomy.md  swarm-immune-response.md  telemetry-analysis.md
docs/examples/: baseline-growth.yaml  coordinated-attack.jsonl  distributed-pressure.yaml  high_mutation.yaml  (+5 more)
scripts/: analyze_stability.py  analyze_telemetry.py  evaluate_lineage_pressure.sh  generate_block_shuffled_control.py  generate_shuffled_control.py  generate_volume_matched_control.py  lineage_analysis.ipynb  pitch_demo.sh  playback_simulation.py  prepare_telemetry_dashboard.py  run_adaptive_mutation_analysis.sh  run_attack_simulation.sh  run_crossover_analysis.sh  run_evolution_smoke_test.sh  run_hostile_evolution.sh  run_long_analysis.sh  run_mutation_analysis.sh  run_targeted_mutation_analysis.sh  run_traitor_evolution.sh  run_validation_suite.py  show_analysis_plots.py  telemetry_correlate.py  telemetry_utils.py  visualize_abilene_results.py  visualize_correlation.py  visualize_genome_drift.py  visualize_topology.py  visualize_trust_graph.py
src/: adversarial.rs  cellular.rs  config.rs  immune.rs  lib.rs  main.rs  orchestration.rs  signaling.rs  stimulus.rs  telemetry.rs
tests/: security_regression.rs
(+3 files in other folders)
