[package]
name = "morphogenetic-security"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
csv = "1.3"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
rand = "0.8"
md5 = "0.8.0"
ed25519-dalek = "2.2.0"
sha2 = "0.10.9"
serde_bytes = "0.11.19"

[dev-dependencies]
tempfile = "3.10"
